--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
   </div>
   <div class="animated-image">
-    <img src="./hero 1.webp" alt="" height="300px" width="300px" class="anim-pulse">
+    <img src="./training.webp" alt="" height="300px" width="300px" class="anim-pulse">
     <img src="./hero 2.webp" alt="" height="300px" width="300px" class="anim-pulse">
   </div>
 </section>
