--- a/index.html.html
+++ b/index.html.html
@@ -63,7 +63,7 @@
     </div>
   </div>
   <div class="animated-image">
-    <img src="./hero 1.webp" alt="" height="300px" width="300px" class="anim-pulse" >
+    <img src="./training.webp" alt="" height="300px" width="300px" class="anim-pulse" >
     <img src="./hero 2.webp" alt="" height="300px" width="300px" class="anim-pulse">
     <!-- <img src="./img3.jpg" alt="" height="300px" width="300px">
     <img src="./img4.jpg" alt="" height="300px" width="300px"> -->
